# japanese-grammar-scraper

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pre-commit.yml  test.yml
api/: main.py
data/: input.json  output.json
docs/source/: conf.py  gorigori.Scraper.rst  gorigori.rst  index.rst
gorigori/: __init__.py  _constants.py  _source.py  scrape.py  source.py
gorigori/data/: input.json  output.json
tests/: test__source_jlpt_sensei.py  test__source_nihongo_kyoshi.py  test_jlpt_sensei_static_methods.py  test_nihongo_kyoshi_static_methods.py  test_scrape_scraper.py  test_scraper.py
